--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: localhost
   tasks:
+
   - name: Install Main Packages
     become: yes
     apt:
@@ -21,6 +22,26 @@
 
   - debug: msg="{{ aptout.stdout_lines }}"
     when: aptout.stdout_lines is defined
+
+  - name: Install Docker
+    become: yes
+    apt:
+      update_cache: yes
+      state: latest
+      pkg:
+      - docker.io
+      - docker-compose
+    register: aptout
+
+  - debug: msg="{{ aptout.stdout_lines }}"
+    when: aptout.stdout_lines is defined
+
+  - name: Allow running Docker without sudo
+    become: yes
+    user:
+      name: "{{ ansible_user_id }}"
+      groups: docker
+      append: yes
 
   - name: Remove useless packages from the cache
     become: yes
