--- a/playbook.yml
+++ b/playbook.yml
@@ -23,6 +23,19 @@
   - debug: msg="{{ aptout.stdout_lines }}"
     when: aptout.stdout_lines is defined
 
+  - name: Install Gnome Packages
+    become: yes
+    apt:
+      update_cache: yes
+      state: latest
+      pkg:
+      - gnome-tweaks
+      - dconf-editor
+    register: aptout
+
+  - debug: msg="{{ aptout.stdout_lines }}"
+    when: aptout.stdout_lines is defined
+
   - name: Install Docker
     become: yes
     apt:
