xdg defaults (Kate default editor)

--- a/playbook.yml
+++ b/playbook.yml
@@ -52,6 +52,19 @@
   - debug: msg="{{ aptout.stdout_lines }}"
     when: aptout.stdout_lines is defined
 
+  - name: Ensure xdg mime default application is set
+    command: "xdg-mime default {{ item[0].desktop_file }} {{ item[1] }}"
+    changed_when: False
+    with_subelements:
+      - "{{ xdg_mime_defaults }}"
+      - mime_types
+    vars:
+      xdg_mime_defaults:
+      - desktop_file: org.kde.kate.desktop
+        mime_types:
+        - text/plain
+        - text/xml
+
   - name: Add Google Chrome apt key
     become: yes
     apt_key:
