install Java versions

--- a/playbook.yml
+++ b/playbook.yml
@@ -65,6 +65,20 @@
         - text/plain
         - text/xml
 
+  - name: Install Java Packages
+    become: yes
+    apt:
+      update_cache: yes
+      state: latest
+      pkg:
+      - openjdk-8-source
+      - openjdk-11-source
+      - openjdk-17-source
+    register: aptout
+
+  - debug: msg="{{ aptout.stdout_lines }}"
+    when: aptout.stdout_lines is defined
+
   - name: Add Google Chrome apt key
     become: yes
     apt_key:
