--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -1,6 +1,8 @@
 - name: Install ZSH
   become: yes
-  apt: name=zsh
+  apt:
+    name: zsh
+    state: latest
   register: aptout
 
 - debug: msg="{{ aptout.stdout_lines }}"
