Install Visual Studio Code

--- a/playbook.yml
+++ b/playbook.yml
@@ -17,6 +17,7 @@
     - include: tasks/docker.yml
     - include: tasks/albert.yml
     - include: tasks/recoll.yml
+    - include: tasks/vscode.yml
   post_tasks:
     - name: Remove useless packages from the cache
       become: yes
