--- a/playbook.yml
+++ b/playbook.yml
@@ -18,6 +18,7 @@
     - include: tasks/albert.yml
     - include: tasks/recoll.yml
     - include: tasks/vscode.yml
+    - include: tasks/other-packages.yml
   post_tasks:
     - name: Remove useless packages from the cache
       become: yes
