fixed apt repo chrome name

--- a/tasks/google-chrome.yml
+++ b/tasks/google-chrome.yml
@@ -9,6 +9,7 @@
   apt_repository:
     repo: deb https://dl.google.com/linux/chrome/deb/ stable main
     state: present
+    filename: google-chrome
 
 - name: Install Google Chrome
   become: yes
