--- a/tasks/dropbox.yml
+++ b/tasks/dropbox.yml
@@ -3,12 +3,14 @@
   apt_key:
     keyserver: pgp.mit.edu
     id: 1C61A2656FB57B7E4DE0F4C1FC918B335044912E
+    state: present
 
 - name: Add Dropbox apt repository
   become: yes
   apt_repository:
     repo: deb https://linux.dropbox.com/ubuntu disco main
     state: present
+    filename: dropbox
 
 - name: Install Dropbox
   become: yes
