--- a/tasks/dropbox.yml
+++ b/tasks/dropbox.yml
@@ -8,7 +8,7 @@
 - name: Add Dropbox apt repository
   become: yes
   apt_repository:
-    repo: deb https://linux.dropbox.com/ubuntu disco main
+    repo: deb [arch=i386,amd64] http://linux.dropbox.com/ubuntu disco main
     state: present
     filename: dropbox
 
