--- a/tasks/google-chrome.yml
+++ b/tasks/google-chrome.yml
@@ -4,13 +4,17 @@
     url: https://dl-ssl.google.com/linux/linux_signing_key.pub
     state: present
 
+- stat: path=/etc/default/google-chrome
+  register: etc_default_google_chrome
+
 # This way we avoid Chrome setting up the APT repository:
 # we want to set up it ourselves
-- name: Touch /etc/default/google-chrome
+- name: Make sure /etc/default/google-chrome exists
   become: yes
   file:
     path: /etc/default/google-chrome
     state: touch
+  when: etc_default_google_chrome.stat.exists is defined and not etc_default_google_chrome.stat.exists
 
 - name: Add Google Chrome apt repository
   become: yes
