--- a/tasks/gnome-extensions.yml
+++ b/tasks/gnome-extensions.yml
@@ -14,3 +14,7 @@
 # - name: Show GNOME Shell extensions
 #   debug: msg="{{ gnome_extensions_full | map(attribute='name') | list | join(",") }}"
 
+- name: Enable Extension
+  dconf:
+    key: "/org/gnome/shell/enabled-extensions"
+    value: "['user-theme@gnome-shell-extensions.gcampax.github.com']"
