Install Git separately and skip it in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
         ansible-galaxy install -r requirements.yml
     - name: Run playbook locally
       run: |
-       ansible-playbook -i local playbook.yml --skip-tags latex
+       ansible-playbook -i local playbook.yml --skip-tags latex,git
