--- a/tasks/albert.yml
+++ b/tasks/albert.yml
@@ -1,13 +1,13 @@
 - name: Add Albert apt key
   become: yes
   apt_key:
-    url: https://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_21.04/Release.key
+    url: "https://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_{{ ansible_distribution_version }}/Release.key"
     state: present
 
 - name: Add Albert apt repository
   become: yes
   apt_repository:
-    repo: deb http://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_21.04/ /
+    repo: "deb http://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_{{ ansible_distribution_version }}/ /"
     filename: home:manuelschneid3r
     state: present
 
