--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,12 @@
 ---
 - hosts: all
   pre_tasks:
+    - name: System details
+      debug: msg="{{ item }}"
+      with_items: 
+      - "{{ ansible_distribution }}"
+      - "{{ ansible_distribution_version }}"
+      - "{{ ansible_distribution_major_version }}"
     - name: update repositories
       become: yes
       apt: update_cache=yes
