--- a/tasks/version-dependent-packages.yml
+++ b/tasks/version-dependent-packages.yml
@@ -7,7 +7,7 @@
     pkg:
     - plocate
   register: aptout
-  when: "{{ ansible_distribution_version }} >= 21.04"
+  when: ansible_distribution_version is version('21.04', '>=')
 
 - debug: msg="{{ aptout.stdout_lines }}"
   when: aptout.stdout_lines is defined
