--- a/playbook.yml
+++ b/playbook.yml
@@ -5,6 +5,7 @@
       debug: msg="{{ item }}"
       with_items: 
       - "{{ ansible_distribution }}"
+      - "{{ ansible_distribution_release }}"
       - "{{ ansible_distribution_version }}"
       - "{{ ansible_distribution_major_version }}"
     - name: update repositories
