--- a/tasks/amarok.yml
+++ b/tasks/amarok.yml
@@ -1,9 +1,17 @@
-- name: Add Amarok KF5 snapshots
+- name: Add Amarok KF5 snapshots with Codename
   become: yes
   apt_repository:
     repo: ppa:pgomes/amarok
     state: present
     codename: hirsute # Impish not yet supported
+  when: ansible_distribution_version is version('21.10', '>=')
+
+- name: Add Amarok KF5 snapshots with automatic Codename
+  become: yes
+  apt_repository:
+    repo: ppa:pgomes/amarok
+    state: present
+  when: ansible_distribution_version is version('21.10', '<')
 
 - name: Install Amarok
   become: yes
