gnome-packages first

--- a/tasks/gnome-packages.yml
+++ b/tasks/gnome-packages.yml
@@ -4,7 +4,9 @@
     state: latest
     pkg:
     - gnome-tweaks
-    - guake
+    - dconf-cli
+    - dconf-editor
+    - python3-psutil
   register: aptout
 
 - debug: msg="{{ aptout.stdout_lines }}"
