--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,6 @@ jobs:
     - name: Run playbook locally
       run: |
        ansible-playbook -i local playbook.yml --skip-tags latex,git
+    - name: Run playbook locally again
+      run: |
+       ansible-playbook -i local playbook.yml --skip-tags latex,git
