--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,12 @@ jobs:
         ansible-galaxy install -r requirements.yml
     - name: Run playbook locally
       run: |
-       ansible-playbook -i local playbook.yml --skip-tags latex,git
+        ansible-playbook -i local playbook.yml --skip-tags latex,git
     - name: Run playbook locally again
       run: |
-       ansible-playbook -i local playbook.yml --skip-tags latex,git
+        ansible-playbook -i local playbook.yml --skip-tags latex,git | tee second-run.output
+    - name: Test idempotency
+      run: |
+        grep -q 'changed=0.*failed=0' second-run.output
+        && (echo 'Idempotence test: pass' && exit 0)
+        || (echo 'Idempotence test: fail' && exit 1)
