separate file for touchegg

--- a/playbook.yml
+++ b/playbook.yml
@@ -34,6 +34,7 @@
     - include: tasks/vscode.yml
     - include: tasks/other-packages.yml
     - include: tasks/version-dependent-packages.yml
+    - include: tasks/touchegg.yml
     - include: tasks/amarok.yml
     - block:
       - include: tasks/latex.yml
