--- a/tasks/vscode.yml
+++ b/tasks/vscode.yml
@@ -1,7 +1,17 @@
-- name: Install VS apt key
+- name: Copy Microsoft apt key
+  # The apt_key file is expected to be found on the remote host
+  # so we first need to copy it
+  become: yes
+  copy:
+    src: "{{ playbook_dir }}/tasks/files/keys/microsoft.asc"
+    dest: "/tmp/"
+
+- name: Add VS apt key
   become: yes
   apt_key:
-    url: 'https://packages.microsoft.com/keys/microsoft.asc'
+    # url: 'https://packages.microsoft.com/keys/microsoft.asc'
+    # use locally save key to avoid possible temporary failures
+    file: "/tmp/microsoft.asc"
     state: present
 
 - name: Add VS Code repo (apt)
