--- a/tasks/recoll.yml
+++ b/tasks/recoll.yml
@@ -14,6 +14,11 @@
     file: "/tmp/recoll_signing_key.pub"
     state: present
 
+- name: Add Recoll apt repository
+  become: yes
+  apt_repository:
+    repo: ppa:recoll-backports/recoll-1.15-on
+
 - name: Install Recoll
   become: yes
   apt:
