--- a/tasks/recoll.yml
+++ b/tasks/recoll.yml
@@ -18,6 +18,7 @@
   become: yes
   apt_repository:
     repo: ppa:recoll-backports/recoll-1.15-on
+    state: present
 
 - name: Install Recoll
   become: yes
