--- a/tasks/recoll.yml
+++ b/tasks/recoll.yml
@@ -17,7 +17,7 @@
 - name: Add Recoll apt repository
   become: yes
   apt_repository:
-    repo: ppa:recoll-backports/recoll-1.15-on
+    repo: "deb http://ppa.launchpad.net/recoll-backports/recoll-1.15-on/ubuntu {{ ansible_distribution_release }} main"
     state: present
 
 - name: Install Recoll
