--- a/tasks/recoll.yml
+++ b/tasks/recoll.yml
@@ -18,6 +18,7 @@
   become: yes
   apt_repository:
     repo: "deb http://ppa.launchpad.net/recoll-backports/recoll-1.15-on/ubuntu {{ ansible_distribution_release }} main"
+    filename: "recoll-backports-ubuntu-recoll-1_15-on-{{ ansible_distribution_release }}"
     state: present
 
 - name: Install Recoll
