--- a/playbook-kubuntu.yml
+++ b/playbook-kubuntu.yml
@@ -28,7 +28,7 @@
     #- include: tasks/kde-packages.yml
     - include: tasks/java-packages.yml
     - include: tasks/google-chrome.yml
-    #- include: tasks/dropbox.yml
+    - include: tasks/dropbox.yml
     - include: tasks/docker.yml
     #- include: tasks/albert.yml
     - include: tasks/recoll.yml
