--- a/playbook-kubuntu.yml
+++ b/playbook-kubuntu.yml
@@ -33,7 +33,8 @@
     #- include: tasks/albert.yml
     - include: tasks/recoll.yml
     - include: tasks/vscode.yml
-#    - include: tasks/other-packages.yml UPDATE WITH kubuntu-restricted-extras
+    - include: tasks/kubuntu-restricted-extras.yml
+    - include: tasks/other-packages.yml
     - include: tasks/version-dependent-packages.yml
     - include: tasks/amarok.yml
     - block:
