--- a/playbook-kubuntu.yml
+++ b/playbook-kubuntu.yml
@@ -16,11 +16,11 @@
     - block:
       - include: tasks/git.yml
       tags: git
-    #- include: tasks/gnome-packages.yml
     #- include: tasks/gnome-extensions.yml
     #- include: tasks/gnome-configurations.yml
     - include: tasks/kubuntu-backports.yml
     - include: tasks/main-packages.yml
+    - include: tasks/kde-packages.yml
     - include: tasks/firefox.yml
     #- include: tasks/guake.yml
     - include: tasks/zsh.yml
