--- a/tasks/java-packages.yml
+++ b/tasks/java-packages.yml
@@ -26,6 +26,11 @@
     - 11
     - 17
 
+- name: Install libwebkit2gtk (for Eclipse SWT Browser)
+  apt:
+    state: latest
+    name: libwebkit2gtk-4.0-37
+
 - name: Install Maven
   include_role:
     name: gantsign.maven
